# sippy

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: api_types.rs  error.rs  main.rs  panera_client.rs
