[package]
name = "sippy"
version = "1.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11.14", features=["blocking", "json"]}
serde = {version="1.0.152", features=["derive"]}
serde_json = "1.0"
dirs = "4.0"
clap = { version = "4.1.8", features = ["derive"] }
anyhow = "1.0.69"
